// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExtendedReminder renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 4px;
  position: relative;
  padding: 16px;
  background-color: #e4edff;
}

.emotion-3 {
  position: absolute;
  top: -12px;
  left: 16px;
  font-weight: 500;
  text-transform: uppercase;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-5 {
=======
.emotion-3 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-5 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #3f6ed8;
  color: #fff;
  font-size: 12px;
  line-height: 24px;
  height: 24px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7 {
=======
.emotion-4 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-5 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-7 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  fill: #fff;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7.emotion-7 {
=======
.emotion-4.emotion-4 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-5.emotion-5 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-7.emotion-7 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  vertical-align: middle;
  margin-right: 4px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-10 {
=======
.emotion-5 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-6 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-7 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-10 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
  font-weight: 600;
  text-transform: uppercase;
  color: #3f6ed8;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-10.emotion-10 {
  margin-bottom: 8px;
}

.emotion-12 {
=======
.emotion-5.emotion-5 {
  margin-bottom: 8px;
}

.emotion-7 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-6.emotion-6 {
  margin-bottom: 8px;
}

.emotion-8 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-7.emotion-7 {
  margin-bottom: 8px;
}

.emotion-9 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-10.emotion-10 {
  margin-bottom: 8px;
}

.emotion-12 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-12.emotion-12 {
  margin-bottom: 8px;
}

.emotion-15 {
=======
.emotion-7.emotion-7 {
  margin-bottom: 8px;
}

.emotion-8 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-8.emotion-8 {
  margin-bottom: 8px;
}

.emotion-9 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-9.emotion-9 {
  margin-bottom: 8px;
}

.emotion-11 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-12.emotion-12 {
  margin-bottom: 8px;
}

.emotion-15 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #fff;
  color: #3f6ed8;
  vertical-align: baseline;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 8px;
  margin-top: auto;
  color: #3f6ed8;
  background-color: transparent;
  padding: 0;
  width: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-15:hover,
.emotion-15:focus {
=======
.emotion-8:hover,
.emotion-8:focus {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-9:hover,
.emotion-9:focus {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-11:hover,
.emotion-11:focus {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-15:hover,
.emotion-15:focus {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  -webkit-text-decoration: none;
  text-decoration: none;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-15:hover,
.emotion-15:focus {
=======
.emotion-8:hover,
.emotion-8:focus {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-9:hover,
.emotion-9:focus {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-11:hover,
.emotion-11:focus {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-15:hover,
.emotion-15:focus {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  color: #1e4293;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-16 {
=======
.emotion-9 {
=======
.emotion-10 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  margin-right: 8px;
  pointer-events: none;
}

<<<<<<< HEAD
.emotion-9.emotion-9 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-10.emotion-10 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-12 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-16 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-19 {
=======
.emotion-10 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-12 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-15 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-19 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-19.emotion-19 {
  vertical-align: middle;
}

.emotion-20 {
=======
.emotion-11 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-12.emotion-12 {
  vertical-align: middle;
}

.emotion-13 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-15.emotion-15 {
  vertical-align: middle;
}

.emotion-16 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-19.emotion-19 {
  vertical-align: middle;
}

.emotion-20 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span
<<<<<<< HEAD
<<<<<<< HEAD
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-6 emotion-7"
=======
          class="sc-ui-icon emotion-3 emotion-4"
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
        class="emotion-2 emotion-3"
      >
        <svg
          class="sc-ui-icon emotion-4 emotion-5"
>>>>>>> refactor: use colors from theme 1 (#150)
=======
        class="emotion-4 emotion-5"
      >
        <svg
          class="sc-ui-icon emotion-6 emotion-7"
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
          viewBox="0 0 24 24"
        >
          <path
            d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
          />
        </svg>
        10 days remaining
      </span>
    </div>
    <p
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-8 emotion-9 emotion-10"
=======
      class="emotion-4 emotion-5"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
      class="emotion-5 emotion-6"
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
      class="emotion-6 emotion-7"
>>>>>>> refactor: use colors from theme 1 (#150)
=======
      class="emotion-8 emotion-9 emotion-10"
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
    >
      Verify your credit card
    </p>
    <p
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-9 emotion-12"
=======
      class="emotion-4 emotion-7"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
      class="emotion-5 emotion-8"
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
      class="emotion-6 emotion-9"
>>>>>>> refactor: use colors from theme 1 (#150)
=======
      class="emotion-9 emotion-12"
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
    >
      Enter the code we send to your bank account to validate your payment method.
    </p>
    <a
      aria-disabled="false"
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-13 emotion-14 emotion-15"
=======
      class="emotion-8"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
      class="emotion-9"
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
      class="emotion-10 emotion-11"
>>>>>>> refactor: use colors from theme 1 (#150)
=======
      class="emotion-13 emotion-14 emotion-15"
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
      href="/"
      to="/"
    >
      <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
        class="emotion-16 emotion-17"
      >
        <svg
          class="sc-ui-icon emotion-6 emotion-19"
=======
        class="emotion-9"
      >
        <svg
          class="sc-ui-icon emotion-10"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
        class="emotion-10"
      >
        <svg
          class="sc-ui-icon emotion-3 emotion-12"
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
        class="emotion-12 emotion-13"
      >
        <svg
          class="sc-ui-icon emotion-4 emotion-15"
>>>>>>> refactor: use colors from theme 1 (#150)
=======
        class="emotion-16 emotion-17"
      >
        <svg
          class="sc-ui-icon emotion-6 emotion-19"
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
          viewBox="0 0 24 24"
        >
          <path
            d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
          />
        </svg>
      </div>
      <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
        class="emotion-20 emotion-21"
=======
        class="content emotion-11"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
        class="content emotion-13"
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
        class="emotion-16 emotion-17"
>>>>>>> refactor: use colors from theme 1 (#150)
=======
        class="emotion-20 emotion-21"
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
      >
        Verify my credit card
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ExtendedReminder renders correctly with variant 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 4px;
  position: relative;
  padding: 16px;
  background-color: #ffefe6;
}

.emotion-3 {
  position: absolute;
  top: -12px;
  left: 16px;
  font-weight: 500;
  text-transform: uppercase;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-5 {
=======
.emotion-3 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-5 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #ff8c69;
  color: #fff;
  font-size: 12px;
  line-height: 24px;
  height: 24px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7 {
=======
.emotion-4 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-5 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-7 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  fill: #fff;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7.emotion-7 {
=======
.emotion-4.emotion-4 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-5.emotion-5 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-7.emotion-7 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  vertical-align: middle;
  margin-right: 4px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-10 {
=======
.emotion-5 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-6 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-7 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-10 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
  font-weight: 600;
  text-transform: uppercase;
  color: #ff8c69;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-10.emotion-10 {
  margin-bottom: 8px;
}

.emotion-12 {
=======
.emotion-5.emotion-5 {
  margin-bottom: 8px;
}

.emotion-7 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-6.emotion-6 {
  margin-bottom: 8px;
}

.emotion-8 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-7.emotion-7 {
  margin-bottom: 8px;
}

.emotion-9 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-10.emotion-10 {
  margin-bottom: 8px;
}

.emotion-12 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-12.emotion-12 {
  margin-bottom: 8px;
}

.emotion-15 {
=======
.emotion-7.emotion-7 {
  margin-bottom: 8px;
}

.emotion-8 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-8.emotion-8 {
  margin-bottom: 8px;
}

.emotion-9 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-9.emotion-9 {
  margin-bottom: 8px;
}

.emotion-11 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-12.emotion-12 {
  margin-bottom: 8px;
}

.emotion-15 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #fff;
  color: #3f6ed8;
  vertical-align: baseline;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 8px;
  margin-top: auto;
  color: #3f6ed8;
  background-color: transparent;
  padding: 0;
  width: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-15:hover,
.emotion-15:focus {
=======
.emotion-8:hover,
.emotion-8:focus {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-9:hover,
.emotion-9:focus {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-11:hover,
.emotion-11:focus {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-15:hover,
.emotion-15:focus {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  -webkit-text-decoration: none;
  text-decoration: none;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-15:hover,
.emotion-15:focus {
=======
.emotion-8:hover,
.emotion-8:focus {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-9:hover,
.emotion-9:focus {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-11:hover,
.emotion-11:focus {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-15:hover,
.emotion-15:focus {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  color: #1e4293;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-16 {
=======
.emotion-9 {
=======
.emotion-10 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  margin-right: 8px;
  pointer-events: none;
}

<<<<<<< HEAD
.emotion-9.emotion-9 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-10.emotion-10 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-12 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-16 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-19 {
=======
.emotion-10 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-12 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-15 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-19 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-19.emotion-19 {
  vertical-align: middle;
}

.emotion-20 {
=======
.emotion-11 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-12.emotion-12 {
  vertical-align: middle;
}

.emotion-13 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-15.emotion-15 {
  vertical-align: middle;
}

.emotion-16 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-19.emotion-19 {
  vertical-align: middle;
}

.emotion-20 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span
<<<<<<< HEAD
<<<<<<< HEAD
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-6 emotion-7"
=======
          class="sc-ui-icon emotion-3 emotion-4"
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
        class="emotion-2 emotion-3"
      >
        <svg
          class="sc-ui-icon emotion-4 emotion-5"
>>>>>>> refactor: use colors from theme 1 (#150)
=======
        class="emotion-4 emotion-5"
      >
        <svg
          class="sc-ui-icon emotion-6 emotion-7"
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
          viewBox="0 0 24 24"
        >
          <path
            d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
          />
        </svg>
        10 days remaining
      </span>
    </div>
    <p
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-8 emotion-9 emotion-10"
=======
      class="emotion-4 emotion-5"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
      class="emotion-5 emotion-6"
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
      class="emotion-6 emotion-7"
>>>>>>> refactor: use colors from theme 1 (#150)
=======
      class="emotion-8 emotion-9 emotion-10"
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
    >
      Verify your credit card
    </p>
    <p
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-9 emotion-12"
=======
      class="emotion-4 emotion-7"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
      class="emotion-5 emotion-8"
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
      class="emotion-6 emotion-9"
>>>>>>> refactor: use colors from theme 1 (#150)
=======
      class="emotion-9 emotion-12"
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
    >
      Enter the code we send to your bank account to validate your payment method.
    </p>
    <a
      aria-disabled="false"
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-13 emotion-14 emotion-15"
=======
      class="emotion-8"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
      class="emotion-9"
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
      class="emotion-10 emotion-11"
>>>>>>> refactor: use colors from theme 1 (#150)
=======
      class="emotion-13 emotion-14 emotion-15"
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
      href="/"
      to="/"
    >
      <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
        class="emotion-16 emotion-17"
      >
        <svg
          class="sc-ui-icon emotion-6 emotion-19"
=======
        class="emotion-9"
      >
        <svg
          class="sc-ui-icon emotion-10"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
        class="emotion-10"
      >
        <svg
          class="sc-ui-icon emotion-3 emotion-12"
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
        class="emotion-12 emotion-13"
      >
        <svg
          class="sc-ui-icon emotion-4 emotion-15"
>>>>>>> refactor: use colors from theme 1 (#150)
=======
        class="emotion-16 emotion-17"
      >
        <svg
          class="sc-ui-icon emotion-6 emotion-19"
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
          viewBox="0 0 24 24"
        >
          <path
            d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
          />
        </svg>
      </div>
      <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
        class="emotion-20 emotion-21"
=======
        class="content emotion-11"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
        class="content emotion-13"
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
        class="emotion-16 emotion-17"
>>>>>>> refactor: use colors from theme 1 (#150)
=======
        class="emotion-20 emotion-21"
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
      >
        Verify my credit card
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ExtendedReminder renders correctly without link 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 4px;
  position: relative;
  padding: 16px;
  background-color: #ffefe6;
}

.emotion-3 {
  position: absolute;
  top: -12px;
  left: 16px;
  font-weight: 500;
  text-transform: uppercase;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-5 {
=======
.emotion-3 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-5 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #ff8c69;
  color: #fff;
  font-size: 12px;
  line-height: 24px;
  height: 24px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7 {
=======
.emotion-4 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-5 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-7 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  fill: #fff;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7.emotion-7 {
=======
.emotion-4.emotion-4 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-5.emotion-5 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-7.emotion-7 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  vertical-align: middle;
  margin-right: 4px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-10 {
=======
.emotion-5 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-6 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-7 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-10 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
  font-weight: 600;
  text-transform: uppercase;
  color: #ff8c69;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-10.emotion-10 {
  margin-bottom: 8px;
}

.emotion-12 {
=======
.emotion-5.emotion-5 {
  margin-bottom: 8px;
}

.emotion-7 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-6.emotion-6 {
  margin-bottom: 8px;
}

.emotion-8 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-7.emotion-7 {
  margin-bottom: 8px;
}

.emotion-9 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-10.emotion-10 {
  margin-bottom: 8px;
}

.emotion-12 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.emotion-12.emotion-12 {
=======
.emotion-7.emotion-7 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-8.emotion-8 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-9.emotion-9 {
>>>>>>> refactor: use colors from theme 1 (#150)
=======
.emotion-12.emotion-12 {
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
  margin-bottom: 8px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span
<<<<<<< HEAD
<<<<<<< HEAD
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-6 emotion-7"
=======
          class="sc-ui-icon emotion-3 emotion-4"
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
        class="emotion-2 emotion-3"
      >
        <svg
          class="sc-ui-icon emotion-4 emotion-5"
>>>>>>> refactor: use colors from theme 1 (#150)
=======
        class="emotion-4 emotion-5"
      >
        <svg
          class="sc-ui-icon emotion-6 emotion-7"
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
          viewBox="0 0 24 24"
        >
          <path
            d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
          />
        </svg>
        10 days remaining
      </span>
    </div>
    <p
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-8 emotion-9 emotion-10"
=======
      class="emotion-4 emotion-5"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
      class="emotion-5 emotion-6"
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
      class="emotion-6 emotion-7"
>>>>>>> refactor: use colors from theme 1 (#150)
=======
      class="emotion-8 emotion-9 emotion-10"
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
    >
      Verify your credit card
    </p>
    <p
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-9 emotion-12"
=======
      class="emotion-4 emotion-7"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
      class="emotion-5 emotion-8"
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
      class="emotion-6 emotion-9"
>>>>>>> refactor: use colors from theme 1 (#150)
=======
      class="emotion-9 emotion-12"
>>>>>>> refactor: use colors from theme instead of import 2 (#152)
    >
      Enter the code we send to your bank account to validate your payment method.
    </p>
  </div>
</DocumentFragment>
`;
